creamos base e incluimos codigo css

--- a/ideas.html
+++ b/ideas.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis ideas</title>
+    <!--<style>
+                /* selector (selecctor de elemento afecta a todas las etiquetas) {
+                propiedad: valor ;
+                propiedad: valor valor;
+                header a {} se modificaran todos de esa seccion
+
+                } */
+            header a{ color: red; text-transform: uppercase; } 
+            </style> -->
+    <link rel ="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
 <div class="contenedor">
@@ -32,8 +42,16 @@
     <main class="sandbox">
         <div class="contenido">
             <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, perspiciatis.</h2>
+            <!--style="text-transform: uppercase; color: red" ----text-transform es una propiedad uppercase es un valor-->
+            <!-- en el documento ---- se vuelve una etiquetas <style> span{ color: red; } </style> -->
+             <!-- comentario en html ---  comentario en css /*  */-->
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, accusantium architecto assumenda blanditiis doloribus earum error eum explicabo facere illum, incidunt ipsa ipsum magnam omnis optio reprehenderit sunt totam voluptatibus!</p>
             <a href="">Ejemplo de botón</a>
+            <span class="rojo mayusculas">Lorem, ipsum.</span>
+            <span class="mayusculas">Corporis, a!</span>
+            <span class="rojo mayusculas">Doloremque, placeat!</span>
+            <!--el atributo sirve para identificar un elemento unico, su valor no se repite en toda la pagina-->
+            <span id="unico">Possimus, rerum.</span>
         </div>
 
 
