--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de mi</title>
+    <link rel ="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
 <div class="contenedor">
