ultimos cambios antes del traslado del romote

--- a/ideas.html
+++ b/ideas.html
@@ -52,6 +52,17 @@
             <span class="rojo mayusculas">Doloremque, placeat!</span>
             <!--el atributo sirve para identificar un elemento unico, su valor no se repite en toda la pagina-->
             <span id="unico">Possimus, rerum.</span>
+
+            <div class="ejemplo">
+                <div> 1
+                </div>
+                <div >
+                    2
+                </div>
+                <div >
+                    3
+                </div>
+            </div>
         </div>
 
 
