modificaciones de index incluyendo imagen

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <main>
         <!-- ETIQUETA ESTRUCTURAL para el cuerpo principal de mi contenido.-->
         <div class="hero">
-            <img src="" alt="">
+            <img src="imagenes/invierno.png" alt="ave en invierno">
+            <!--<img src="imagenes/image 12.png" alt="planta en invierno">-->
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo molestiae quisquam voluptas?<a
                     href="">Conoce más</a></p>
         </div>
