--- a/ideas.html
+++ b/ideas.html
@@ -71,7 +71,7 @@
         <p>© 2025</p>
         <nav class="redes">
             <ul>
-                <li><a href="">Facebook</a></li>
+                <li><a href="">Facebook</a><z/li>
                 <li><a href="">Instagram</a></li>
                 <li><a href="">Tiktok</a></li>
             </ul>
