--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 <div class="contenedor">
     <header>
         <!-- Header es un contenedor para los elementos que identifican este contenido. Puede ir el menú y otros-->
-        <h1><a href="">Mi primera página</a>
+        <h1><a href="index.html">Mi primera página</a>
             <!-- Las etiquetas h sirven para titulares (headings)-->
         </h1>
         <nav>
@@ -32,7 +32,7 @@
     </header>
     <main aria-labelledby="contacto-titulo">
         <h1 id="contacto-titulo">Contacto</h1>
-
+        <div class="fila interno_bloques">
         <section aria-labelledby="form-titulo">
             <h2 id="form-titulo">Envíanos un mensaje</h2>
 
@@ -87,6 +87,7 @@
                 <a href="https://maps.google.com/?q=Av.+Arce+1234,+La+Paz,+Bolivia" target="_blank" rel="noopener">Ver en mapa</a>
             </address>
         </section>
+        </div>
     </main>
 
     <footer>
