--- a/ideas.html
+++ b/ideas.html
@@ -19,7 +19,7 @@
 <div class="contenedor">
     <header>
         <!-- Header es un contenedor para los elementos que identifican este contenido. Puede ir el menú y otros-->
-        <h1><a href="">Mi primera página</a>
+        <h1><a href="index.html">Mi primera página</a>
             <!-- Las etiquetas h sirven para titulares (headings)-->
         </h1>
         <nav>
