--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Es el divisor por defecto-->
     <header>
         <!-- Header es un contenedor para los elementos que identifican este contenido. Puede ir el menú y otros-->
-        <h1><a href="">Mi primera página</a>
+        <h1><a href="index.html">Mi primera página</a>
             <!-- Las etiquetas h sirven para titulares (headings)-->
         </h1>
         <nav>
@@ -33,42 +33,42 @@
     </header>
     <main>
         <!-- ETIQUETA ESTRUCTURAL para el cuerpo principal de mi contenido.-->
-        <div class="hero">
+        <div class="hero espacio_bloques">
             <img src="imagenes/invierno.png" alt="ave en invierno">
             <!--<img src="imagenes/image 12.png" alt="planta en invierno">-->
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo molestiae quisquam voluptas?<a
-                    href="">Conoce más</a></p>
+                    href="" class="btn">Conoce más</a></p>
         </div>
-        <div class="cita">
+        <div class="cita espacio_bloques interno_bloques">
             <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</blockquote>
         </div>
-        <div class="cards">
-            <div class="card"><img src="" alt="">
+        <div class="cards espacio_bloques fila interno_bloques ">
+            <div class="card redondeo"><img src="" alt="" class="redondeo ocultar">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores magnam maiores unde. Consectetur
                     dignissimos eligendi fuga illo quam recusandae soluta?</p>
-                <a href="">Más información</a>
+                <a href="" class="btn">Más información</a>
             </div>
-            <div class="card"><img src="" alt="">
+            <div class="card redondeo"><img src="" alt="" class="redondeo ocultar">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores magnam maiores unde. Consectetur
                     dignissimos eligendi fuga illo quam recusandae soluta?</p>
-                <a href="">Más información</a>
+                <a href="" class="btn">Más información</a>
             </div>
-            <div class="card"><img src="" alt="">
+            <div class="card redondeo"><img src="" alt="" class="redondeo ocultar">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores magnam maiores unde. Consectetur
                     dignissimos eligendi fuga illo quam recusandae soluta?</p>
-                <a href="">Más información</a>
+                <a href="" class="btn">Más información</a>
             </div>
-            <div class="destacado">
-                <img src="" alt="">
-                <div class="txt">
-                    <h2>Lorem ipsum dolor sit amet, consectetur.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque dolor maiores, neque quibusdam voluptates! Autem in incidunt magni nam quo, quod sunt voluptatibus voluptatum. Accusantium animi illo placeat quas?</p>
-                    <a href="">Ver más</a>
-                </div>
-
-            </div>
+            
         </div>
+        <div class="destacado espacio_bloques fila interno_bloques ">
+            <img src="" alt="" class="redondeo ocultar">
+            <div class="txt">
+                <h2>Lorem ipsum dolor sit amet, consectetur.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci atque dolor maiores, neque quibusdam voluptates! Autem in incidunt magni nam quo, quod sunt voluptatibus voluptatum. Accusantium animi illo placeat quas?</p>
+                <a href="" class="btn">Ver más</a>
+            </div>
 
+        </div>
     </main>
     <footer>
         <p>© 2025</p>
