--- a/portafolio.html
+++ b/portafolio.html
@@ -10,7 +10,7 @@
 <div class="contenedor">
     <header>
         <!-- Header es un contenedor para los elementos que identifican este contenido. Puede ir el menú y otros-->
-        <h1><a href="">Mi primera página</a>
+        <h1><a href="index.html">Mi primera página</a>
             <!-- Las etiquetas h sirven para titulares (headings)-->
         </h1>
         <nav>
@@ -32,7 +32,7 @@
     </header>
     <main>
         <h2>Portafolio</h2>
-        <div class="cards_portafolio">
+        <div class="cards_portafolio fila interno_bloques wrap">
             <div class="card"><img src="" alt="">
                 <p><a href="">Lorem ipsum dolor sit amet.</a></p>
             </div>
