--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -10,7 +10,7 @@
 <div class="contenedor">
     <header>
         <!-- Header es un contenedor para los elementos que identifican este contenido. Puede ir el menú y otros-->
-        <h1><a href="">Mi primera página</a>
+        <h1><a href="index.html">Mi primera página</a>
             <!-- Las etiquetas h sirven para titulares (headings)-->
         </h1>
         <nav>
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <main>
-        <div class="carousel">
+        <div class="carousel ">
             <ul>
                 <li><img src="" alt=""></li>
                 <li><img src="" alt=""></li>
@@ -43,7 +43,7 @@
                 <button>Anterior</button>
             </nav>
         </div>
-        <div class="contenido">
+        <div class="contenido fila interno_bloques">
         <article>
             <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur neque numquam quam.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto assumenda cum esse fugit omnis
